# aoc-2024

./: .gitmodules  CMakeLists.txt  README.md
day1/: d1p1.cpp  d1p2.cpp
day2/: CMakeLists.txt  d2p1.cpp  d2p1_tests.cpp  d2p2.cpp  d2p2_tests.cpp
day3/: CMakeLists.txt  d3p1.cpp  d3p1_tests.cpp  d3p2_tests.cpp
day4/: CMakeLists.txt  d4p1.cpp  d4p1_tests.cpp  d4p2.cpp  d4p2_tests.cpp
day5/: CMakeLists.txt  d5p1.cpp  d5p1_tests.cpp  d5p2.cpp  d5p2_tests.cpp  input_page_ordering_rules.txt
